# PlayerCount

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
Data/SKSE/Plugins/: PlayerCount.ini
cmake/: headerlist.cmake  sourcelist.cmake
src/: Config.cpp  Config.h  HttpClient.cpp  HttpClient.h  PCH.h  SteamPlayerService.cpp  SteamPlayerService.h  plugin.cpp
